<!--
  ~    Copyright 2018 nsnikhil
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/matchParent"
    android:padding="@dimen/eight"
    tools:context="com.nsnik.nrs.carmonitor.views.fragments.LoginFragment">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/formNameWrapper"
        style="@style/horizontal">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/formName"
            style="@style/horizontal"
            android:hint="@string/form_name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/formPhoneWrapper"
        style="@style/horizontal"
        app:layout_constraintTop_toBottomOf="@id/formNameWrapper">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/formPhone"
            style="@style/horizontal"
            android:hint="@string/form_phone"
            android:inputType="phone" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/formCarNoWrapper"
        style="@style/horizontal"
        app:layout_constraintTop_toBottomOf="@id/formPhoneWrapper">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/formCarNo"
            style="@style/horizontal"
            android:hint="@string/form_car_no" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fromSubmit"
        style="@style/warpContent"
        android:layout_margin="@dimen/sixteen"
        android:src="@drawable/ic_navigate_next_white_48px"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>
